force-app/main/default/objects/Master_Job__c/Master_Job__c.object-meta.xml
<CustomObject>
    <label>Master Job</label>
    <nameField>
        <label>Master Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>