force-app/main/default/objects/Master_Job__c/fields/Account_Executive_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Jobs3</relationshipName>
    <type>Lookup</type>
</CustomField>