force-app/main/default/objects/Master_Job__c/fields/Actual_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completed_Date__c</fullName>
    <label>Actual Completed Date</label>
    <type>DateTime</type>
</CustomField>