force-app/main/default/objects/Master_Job__c/fields/Billing_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Completed_Date__c</fullName>
    <label>Billing Completed Date</label>
    <type>DateTime</type>
</CustomField>