force-app/main/default/objects/Master_Job__c/fields/Cont_P_O_Client_Job__c.field-meta.xml
<CustomField>
    <fullName>Cont_P_O_Client_Job__c</fullName>
    <label>Cont. P.O./ Client Job #</label>
    <length>35</length>
    <type>Text</type>
</CustomField>