force-app/main/default/objects/Master_Job__c/fields/Contract_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reference_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Reference ID</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Master Jobs</relationshipLabel>
    <relationshipName>Master_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>