force-app/main/default/objects/Master_Job__c/fields/Date_Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Taken__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date &amp; Time Taken</label>
    <type>DateTime</type>
</CustomField>