force-app/main/default/objects/Master_Job__c/fields/Description_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Loss__c</fullName>
    <description>This field is automatically populated by a workflow rule and is used only for list-view display purposes instead of the standard Description field.</description>
    <label>Description of Loss</label>
    <type>TextArea</type>
</CustomField>