force-app/main/default/objects/Master_Job__c/fields/Job_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_End_Date__c</fullName>
    <label>Job End Date</label>
    <type>DateTime</type>
</CustomField>