force-app/main/default/objects/Master_Job__c/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <label>Job Start Date</label>
    <type>DateTime</type>
</CustomField>