force-app/main/default/objects/Master_Job__c/fields/National_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>National_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Jobs2</relationshipName>
    <type>Lookup</type>
</CustomField>