force-app/main/default/objects/Master_Job__c/fields/Office2__c.field-meta.xml
<CustomField>
    <fullName>Office2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Master Jobs</relationshipLabel>
    <relationshipName>Master_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>