force-app/main/default/objects/Master_Job__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Master Jobs (Contact)</relationshipLabel>
    <relationshipName>Master_Jobs2</relationshipName>
    <type>Lookup</type>
</CustomField>