force-app/main/default/objects/Master_Job__c/fields/Project_Director__c.field-meta.xml
<CustomField>
    <fullName>Project_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Master Jobs</relationshipLabel>
    <relationshipName>Master_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>