force-app/main/default/objects/Master_Job__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project_Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Master Jobs (Project_Manager)</relationshipLabel>
    <relationshipName>Master_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>