force-app/main/default/objects/Master_Job__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Master Jobs</relationshipLabel>
    <relationshipName>Master_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>