force-app/main/default/objects/Master_Job__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Qualification</fullName>
            </value>
            <value>
                <fullName>Contract Preparation</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Contract Execution</fullName>
            </value>
            <value>
                <fullName>Contract Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>